<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <TextView
        style="@style/H1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/feelLikeLocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <TextView
        style="@style/H3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/enterEmailToRequest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.405" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLocationInputLayout"
        style="@style/InputEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginStart"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/InputEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/marginEnd"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/continueByPhoneNumber"
        android:textSize="12sp"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLocationInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70" />

    <Button
        android:id="@+id/continueAsGuestButton"
        style="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/continueAsGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueAsGuestButton" />

    <Button
        android:id="@+id/continueWithFacebookButton"
        style="@style/GrayButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:enabled="true"
        android:text="@string/enterThroughFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueWithFacebookButton" />

    <Button
        android:id="@+id/continueButton"
        style="@style/GrayButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:enabled="false"
        android:text="@string/continueVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal90" />

</androidx.constraintlayout.widget.ConstraintLayout>
