<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <ImageView
        android:id="@+id/reviewItemImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/emilia_racne"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteY="0dp"/>

    <TextView
        android:id="@+id/reviewItemName"
        style="@style/H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/emiliyaRance"
        app:layout_constraintBottom_toTopOf="@+id/reviewItemMonth"
        app:layout_constraintStart_toEndOf="@+id/reviewItemImage"
        app:layout_constraintTop_toTopOf="@+id/reviewItemImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/reviewItemMonth"
        style="@style/H4normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/may"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/reviewItemImage"
        app:layout_constraintStart_toEndOf="@+id/reviewItemImage"
        app:layout_constraintTop_toBottomOf="@+id/reviewItemName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/reviewItemYear"
        style="@style/H4normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="2020"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/reviewItemMonth"
        app:layout_constraintStart_toEndOf="@+id/reviewItemMonth"
        app:layout_constraintTop_toTopOf="@+id/reviewItemMonth"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/reviewItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ivanneGrankeReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewItemImage" />

</androidx.constraintlayout.widget.ConstraintLayout>