<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/marginStart">

    <ImageView
        android:id="@+id/forYouItemImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="@+id/forYouItemTitle"
        app:layout_constraintStart_toStartOf="@+id/forYouItemTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/group_20"/>

    <TextView
        android:id="@+id/forYouItemTitle"
        style="@style/H4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/oldTownWalk"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forYouItemImage" />


    <ImageView
        android:id="@+id/forYouItemDurationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_clock_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forYouItemTitle"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/forYouItemDurationText"
        style="@style/Text10spMontserratMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:text="@string/min90"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/forYouItemDurationIcon"
        app:layout_constraintTop_toBottomOf="@+id/forYouItemTitle" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/ic_tick_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forYouItemCostText"
        app:layout_constraintTop_toBottomOf="@+id/forYouItemTitle"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/forYouItemCostText"
        style="@style/Text10spMontserratMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:text="@string/rub600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forYouItemTitle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>