<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/kenBurnsImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/daniel_jensen_unsplash_1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleSplashText"
        style="@style/H1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/titleSplash3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bodySplashText"
        style="@style/H3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:fontFamily="@font/montserrat_medium"

        android:lineSpacingExtra="0dp"

        android:text="@string/bodySplash1"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90" />

    <Button
        android:id="@+id/splashBeginButton"
        style="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:text="@string/begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal90" />

</androidx.constraintlayout.widget.ConstraintLayout>